# Apollo_13

./: CMakeLists.txt  README.md
apollo_13/: CMakeLists.txt  CMakeLists.txt~  package.xml
apollo_13/config/: costmap_common_params.yaml  costmap_common_params_simulation.yaml  global_costmap_params.yaml  global_costmap_params_simulation.yaml  kinect_calibration_with_lens.yaml  local_costmap_params.yaml  sbpl_global_params.yaml  teb_local_planner_lane_follower_params.yaml  teb_local_planner_params.yaml
apollo_13/config/aruco_boards/: board2.yml  board4.yml  board5.yml  board6.yml  boards.yml
apollo_13/data/TouchOSC_Template/: Projektseminar.touchosc
apollo_13/data/urdf_model/: apollo_13.urdf
apollo_13/data/viewer/: viewer.rviz
apollo_13/include/apollo_13/: CommonProperties.h  MultiButton.h  MultiXYPad.h  ScalableControl.h  Tabpage.h  TouchOSC_Common.h  XYPad.h
apollo_13/launch/: amcl.launch  amcl_automap.launch  apollo_13.launch  automap.launch  automap_distributed.launch  automap_distributed.launch~  automap_distributed_mapping.launch  car_display.launch  complementary_filter.launch  freenect.launch  freenect_lane_detection.launch  interaction.launch  lane_follower.launch  lane_follower_sim.launch
apollo_13/src/: apollo_13.cpp  car_aruco.cpp  kinect2_filter.cpp  lane_follower.cpp
apollo_13/utils/motion_primitives_designer/mprims/: .gitignore  CMakeLists.txt  build
apollo_13/utils/motion_primitives_designer/mprims/src/: DiscreteAnglesSpinBox.cpp  DiscreteAnglesSpinBox.h  GLWidget.cpp  GLWidget.h  MotionPrimitiveDesignerWindow.cpp  MotionPrimitiveDesignerWindow.h  Pose2.h  unicycle.cpp  unicycle_motions.cpp  unicycle_motions.h
automap/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
automap/cfg/: Exploration.cfg
automap/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
automap/config/apollo_13/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
automap/config/simulation/: costmap_common_local_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  sbpl_global_params.yaml  teb_local_planner_params.yaml
automap/data/output/: exploration_statistics.txt
automap/data/output/1st Try/: exploration_statistics.txt
automap/data/output/2nd Try/: exploration_statistics.txt
automap/data/output/3rd Try/: exploration_statistics.txt
automap/data/output/4th Try/: exploration_statistics.txt
automap/data/output/Best Try (slight changes)/: exploration_statistics.txt
automap/data/output/Best Try on Robot/: exploration_statistics.txt
automap/data/output/First Successfull Try in RL/: exploration_statistics.txt
automap/data/output/Second Try with Video/: exploration_statistics.txt
automap/include/: Contour.h  ExplorationPlanner.h  FloatingEdges.h  Frontier.h  FrontierDetector.h  GlobalPlannerAdapter.h  Path.h  PathtransformPlanner.h  PlannerException.h
automap/msg/: automap_ctrl_msg.msg
automap/src/: Contour.cpp  ExplorationPlanner.cpp  FloatingEdges.cpp  Frontier.cpp  FrontierDetector.cpp  GlobalPlannerAdapter.cpp  Path.cpp  PathtransformPlanner.cpp  PlannerException.cpp  automap_node.cpp
caltech_lane_detection/: Readme_compile.txt  Readme_compile.txt~  clips
caltech_lane_detection/src/: CameraInfo.conf  InversePerspectiveMapping.cc  LaneDetector.cc  Lanes.conf~  Lanes_example.conf  Makefile  Makefile~  compile.sh  compile.sh~  logfile.out  main.cc  mcv.cc  run.sh~  run_example.sh  run_example.sh~
car_handler/: CMakeLists.txt  package.xml
car_handler/include/car_handler/: ForwardKinematics.h  Speedometer.h  cArduino.h
car_handler/src/: ForwardKinematics.cpp  PositionEstimation.cpp  Speedometer.cpp  cArduino.cpp  car_arduino.cpp  car_handler.cpp
car_handler/src/arduino_Pose/: arduino_Pose.ino
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/sbpl_lattice_planner/: SBPLLatticePlannerStats.h
devel/lib/apollo_13/: apollo_13  car_aruco
devel/lib/car_handler/: car_arduino  car_handler_node
devel/lib/pkgconfig/: apollo_13.pc  car_handler.pc  pose_follower.pc  sbpl.pc  sbpl_lattice_planner.pc
iai_kinect2/kinect2_bridge/launch/: kinect2_bridge.launch  kinect2_bridge.launch~  kinect2_bridge_automap.launch  kinect2_bridge_test.launch
motion_primitives_matlab/: genmprim_ackermann.m
simulation/: CMakeLists.txt  CMakeLists.txt~  package.xml
simulation/cfg/: RangeSensor.cfg
simulation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml
simulation/config/aruco_boards/: board1.yml  board3.yml
simulation/data/control/: control.perspective
simulation/data/map/: map.yaml
simulation/data/motion_primitives/: apollo_13_motion_primitives.mprim
simulation/data/other_maps/: clean-willow-full-0.05.pgm
simulation/data/output/: exploration_statistics.txt
simulation/data/urdf_model/: apollo_13.urdf  mapping_model.urdf
simulation/data/viewer/: viewer.rviz
simulation/include/: CarModel.h  Dashboard.cpp  Dashboard.h  Dashboard.ui  ForwardKinematics.h  RangeSensor.h  Raycaster.h
simulation/launch/: amcl.launch  car_display.launch  simulation.launch  simulation.launch~  simulation_human_mapping.launch  simulation_lane_follower.launch  simulation_mapping.launch  simulation_observer.launch
simulation/msg/: ctrl_msg.msg  ctrl_msg.msg~  telemetry_msg.msg
simulation/src/: CarModel.cpp  ForwardKinematics.cpp  RangeSensor.cpp  Raycaster.cpp  simulation_control.cpp  simulation_dashboard.cpp  simulation_laserscan.cpp  simulation_measurements.cpp  simulation_usscan.cpp
src/apollo_13/launch/: aruco_boards.launch  mapping.launch
src/apollo_13/src/: apollo_13.cpp  car_aruco.cpp
src/apollo_13/utils/motion_primitives_designer/mprims/src/: CMakeLists.txt  logging.h
src/car_handler/: CMakeLists.txt
src/car_handler/src/: ForwardKinematics.cpp  Speedometer.cpp  cArduino.cpp  car_arduino.cpp  car_handler.cpp
(+45 files in other folders)
